Fix unused parameter warnings in JITInlines.h https://bugs.webkit.org/show_bug.cgi?id=112560

Reviewed by Zoltan Herczeg.

* jit/JITInlines.h:
(JSC::JIT::beginUninterruptedSequence):
(JSC::JIT::endUninterruptedSequence):
(JSC):

Canonical link: https://commits.webkit.org/131621@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146869 268f45cc-cd09-0410-ab3c-d52691b4dbfc